#444 fix: 60% header gets smaller with content overflow

--- a/projects/biit-ui/popup/src/biit-popup/biit-popup.component.scss
+++ b/projects/biit-ui/popup/src/biit-popup/biit-popup.component.scss
@@ -67,6 +67,7 @@ $error-color: #A1093F;
   justify-content: flex-end;
   height: 2.1rem;
   width: 100%;
+  flex-shrink: 0;
 
   .title {
     display: inline-flex;
